# PathTracer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  main.cpp  rt_app.cpp  rt_app.h
assets/: materials - Kopie.txt  materials.txt  objects - Kopie.txt  objects.txt
